fix(contact) address rows spacing

--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_contact.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_contact.scss
@@ -89,6 +89,7 @@ body.contact-2 .address a:hover {
 body.contact .address span,
 body.contact-2 .address span {
   display: inline-block;
+  margin-bottom: 25px;
 }
 
 body.contact .address span:first-child,
